--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,9 +13,37 @@ code {
     monospace;
 }
 
+.title-group {
+  text-align: center;
+  padding-bottom: 100px;
+}
+
+.title{
+    font-size: 5em;
+}
+
+.sub-title{
+    font-size: 1.5em;
+}
+
+.hidden{
+  display:none;
+}
+
+.main-container {
+  width:fit-content;
+  margin-right:auto;
+  margin-left:auto;
+  margin-top:2em;
+}
+
 .festival-image {
-	max-height: 500px;
-	max-width:500px;
+	max-height: 400px;
+	max-width:300px;
+}
+
+.btn {
+  margin:0.2rem;
 }
 
 .artist-list {
@@ -23,8 +51,14 @@ code {
     padding:0;
     font-size:1.2rem;
     width:300px;
-    height:500px;
+    height:400px;
     overflow-y: scroll;
+
+}
+
+.spotify-login {
+  cursor:pointer;
+  background-color:#ffc107;
 }
 
 .track-list {
@@ -32,12 +66,25 @@ code {
     padding:0;
     font-size:1.2rem;
     width:600px;
-    height:500px;
+    max-width: 100%;
+    max-height: 400px;
     overflow-y: scroll;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
+.btn-container {
+  text-align: center;
+  width:500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .track-li {
-  margin-bottom:0.2em;
+  margin-bottom: 0.5em;
+  background: whitesmoke;
 }
 
 .track-content {
@@ -45,7 +92,9 @@ code {
 }
 
 .artist-li {
-  margin-bottom:0.2em;
+  margin-right: 0.5em;
+  margin-bottom: 0.5em;
+  background: whitesmoke;
 }
 
 .close {
@@ -58,8 +107,70 @@ code {
   display:flex;
   flex-wrap:wrap;
   justify-content: center;
+  min-height:500px;
+}
+
+.full-height {
+  height:100%;
 }
 
 .artist-container-element {
   margin:30px;
+  max-width: 100%;
+}
+
+.image-input {
+    display:inline-block;
+    padding: .375rem .75rem;
+    margin-bottom: 0.2rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    white-space: nowrap;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    width:100%;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #495057;
+  color: white;
+  text-align: center;
+  height:3rem;
+  padding-top: 0.5rem;
+}
+
+.footer-link{
+  color: white;
+}
+
+.footer-link:hover 
+{
+  color: white;  
+}
+
+@media only screen and (max-width: 750px) {
+  body {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  body {
+    padding-bottom: 3rem;
+  }
+}
+
+@media only screen and (min-width: 750px) {
+  .main-container {
+    /*width:760px;*/
+    height:80%;
+    /*box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;*/
+  }
 }
