--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,7 @@ code {
   margin-right:auto;
   margin-left:auto;
   margin-top:2em;
+  margin-bottom:3em;
 }
 
 .festival-image {
@@ -178,8 +179,8 @@ a:not([href]):not([tabindex]):hover
   background-color: #495057;
   color: white;
   text-align: center;
-  height:3rem;
-  padding-top: 0.5rem;
+  height:3em;
+  padding-top: 0.5em;
 }
 
 .footer-link{
